--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "activedirectory": "^0.7.2",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "expo": "~48.0.18",
@@ -29,6 +30,8 @@
     "expo-status-bar": "~1.4.4",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.1",
     "nanoid": "^5.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
