--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kubsu2",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-clipboard/clipboard": "^1.12.1",
     "@react-native-community/datetimepicker": "^6.7.3",
     "@react-native-community/masked-view": "^0.1.11",
@@ -25,7 +25,7 @@
     "cors": "^2.8.5",
     "expo": "~48.0.18",
     "expo-clipboard": "~4.1.2",
-    "expo-crypto": "^12.6.0",
+    "expo-crypto": "~12.2.1",
     "expo-datepicker": "^1.0.23",
     "expo-status-bar": "~1.4.4",
     "express": "^4.18.2",
@@ -37,6 +37,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-clipboard": "^0.0.5",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
@@ -46,7 +47,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-webview": "^13.6.0",
+    "react-native-webview": "11.26.0",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
