--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "activedirectory": "^0.7.2",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "expo": "~48.0.18",
     "expo-clipboard": "~4.1.2",
     "expo-crypto": "~12.2.1",
     "expo-datepicker": "^1.0.23",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "express": "^4.18.2",
     "moment": "^2.29.4",
@@ -35,8 +37,9 @@
     "nanoid": "^5.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.13",
     "react-native-clipboard": "^0.0.5",
+    "react-native-dotenv": "^3.4.9",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
@@ -48,6 +51,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-swiper": "^1.6.0",
     "react-native-webview": "11.26.0",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
